Bugzilla #4640 <https://bugs.freedesktop.org/show_bug.cgi?id=4640> Patch     #5273 <https://bugs.freedesktop.org/attachment.cgi?id=5273>: Add cases for FOURCC_RGBA32 and FOURCC_RGB24. This prevents clients from     receiving incorrect data sizes with these formats. (Jan Schmidt)